data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1751.wast
;; 2. **Test Description: Empty Operand Stack on Branch**    - **Reasoning**: The `br_if` instruction must find an `i32` operand and additional `[t*]` sequence on the stack when evaluating the condition.    - **Constraint Checked**: The presence of required operands on the stack.    - **Inconsistent CFG**: The CFG does not account for the stack state correctly leading to insufficient operands during the branch condition check.    - **Expected Differential Behavior**: The WASM code flags a generic invalid error, while the wizard_engine should report an `EmptyValueStackExpecting` error.

(assert_invalid
  (module
    (func $empty-stack-branch
      (block
        (br_if 0)
      )
    )
  )
  "EmptyValueStackExpecting"
)